<?xml version="1.0" encoding="utf-8"?><!--
    JBoss, Home of Professional Open Source
    Copyright 2014, Red Hat, Inc. and/or its affiliates, and individual
    contributors by the @authors tag. See the copyright.txt in the
    distribution for a full listing of individual contributors.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>
    <string name="app_name">AeroGear Sync HelloWorld</string>
    <string name="project_name">UnifiedPush Sync Client POC</string>
    <string name="aerogear_logo">AeroGear Logo</string>
    <string name="notifications">Notifications</string>
    <string name="nothing_here">Nothing here yet</string>
    <string name="send_notification">Send notifications from the console</string>
    <string name="notification_icon">Notification icon</string>
    <string name="logging_in">Loggin In...</string>
    <string name="title_activity_docs">Docs</string>
    <string name="title_activity_signing_in">Signing In</string>

    <string name="project_title">Diff Sync Demo</string>
    <string name="name">Name</string>
    <string name="profession">Profession:</string>
    <string name="hobbies">Hobbies:</string>
    <string name="send_sync">Sync</string>
    <string name="wait">Wait...</string>
    <string name="syncing">Syncing</string>
    <string name="error_occurred">Something went wrong</string>
    <string name="warning">Warning</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="aerogear_logo_content_description">AeroGear Logo</string>
    <string name="serverHost">10.0.2.2</string>
    <string name="serverPort">7777</string>
    <string name="documentId">12345</string>
</resources>
